--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,7 +28,7 @@ jobs:
         pip install requests requests_mock wheel
     - name: Test
       run: |
-        python test_remotezip.py
+        python test_remotezip.py -v
     - name: Package
       run: |
         python setup.py bdist_wheel
