--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -25,12 +25,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests requests_mock wheel
+        python -m pip install '.[test]'
     - name: Test
       run: |
         python test_remotezip.py -v
     - name: Package
       run: |
+        python -m pip install wheel
         python setup.py bdist_wheel
     - name: Archive artifact
       uses: actions/upload-artifact@v2
