Upgrade GitHub template

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -35,8 +35,8 @@ jobs:
         python -m pip install wheel
         python setup.py bdist_wheel
     - name: Archive artifact
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
-        name: dist
+        name: dist-${{ matrix.python-version }}
         path: |
           dist
